--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <div class="container">
       <div class="card">
         <div class="header">
-          <img src="/assets/images/icon-star.svg" />
+          <img src="icon-star.svg" />
           <h2>FAQs</h2>
         </div>
         <button class="accordion">
           <h3>What is Frontend Mentor, and how will it help me?</h3>
           <img
-            src="/assets/images/icon-plus.svg"
+            src="icon-plus.svg"
             alt=""
             id="img1"
             class="expand1"
@@ -60,7 +60,7 @@
         <button class="accordion">
           <h3>Is Frontend Mentor free?</h3>
           <img
-            src="/assets/images/icon-plus.svg"
+            src="icon-plus.svg"
             alt=""
             id="img2"
             class="expand2"
@@ -77,7 +77,7 @@
         <button class="accordion">
           <h3>Can I use Frontend Mentor projects in my portfolio?</h3>
           <img
-            src="/assets/images/icon-plus.svg"
+            src="icon-plus.svg"
             alt=""
             id="img3"
             class="expand3"
@@ -95,7 +95,7 @@
         <button class="accordion">
           <h3>How can I get help if I'm stuck on a challenge?</h3>
           <img
-            src="/assets/images/icon-plus.svg"
+            src="icon-plus.svg"
             alt=""
             id="img4"
             class="expand4"
